Correct typos in index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <a href="https://t.me/bread_genie"><i class="fa fa-2x fa-telegram" aria-hidden="true"></i></a>
     <p class="footer-text">© Copyright 2020 Bread_Genie <br>
       For Kami, Ahoe and all Atinys! <br>
-      All images belong to KQ Entertainment.
+      All images belongs to KQ Entertainment.
     </p>
   </footer>
 
