--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="carousel-item active">
           <img class="members-img"
             src="https://lh3.googleusercontent.com/gCIYYQR46IvpMNyVByKnMkdu-HtmK3EokVp5lnGFUjWRuN9wPFZKeEHJJbYKgsnrcvnA0_MIKHoUfL21zNNp5dJ1X63crvC5iW_oJ1eU4V59ep6W6_PFMH6Jo8DXeY89h80DOz6eUwLoD_0gTX4UOmXqc4YW6B49zjQ3ZjD6iygzakYrobRCg0boHZ7swQ88gBWwPrbkC54qfm4F3SbI5Nf3MbEDBd60pCLXRQAFzO9DjzSejDUPWqVZJ80KrPxT-_sgE3DfDAhpKMWKVXjUsGZ49xiAv81qlxIdKrYPMgvHVX5jJiZudzbTsPNvRU5JtIqJ9v0xsKA-and8himpIvvCuDCzVe4QC6s6gW2z8jh0Io7jV_Xw1ntcPdgGputzTYmc4-OLHc0GbzmKIL-wK4_v8RsPMmqYEBVpRfEbS7YoNQ0-Yv-ALtWx2wAkFKPO2KD8rr_ai3JZXEFPjTW2UxETVd_shYrKwLaO1hRX-DHqILWBycOdqsAGmWTCC5n1Y33uYv6TRGAXIAD0gXBZY86XcdlDaA1Nr9j1g_uN-B3znRsSSUrw3Hb_j-uTV-sJ2XO9lbJd33X2dc7F2Q4_f-S6B_fxk4I4eG6oqSo0FkRmA5gmD-wVaUXJ5502I7-Eoj-WRc5mZ5inszLtXiFMbGPIxiFBCi4Yk9vqZRYi5CL9ulGovD_N-iINFIdsug=w506-h637-no?authuser=0"
-            alt="honjoong-pic">
-          <h3>Honjoong</h3>
+            alt="hongjoong-pic">
+          <h3>Hongjoong</h3>
         </div>
         <div class="carousel-item">
           <img class="members-img"
@@ -263,7 +263,7 @@
     <a href="https://t.me/bread_genie"><i class="fa fa-2x fa-telegram" aria-hidden="true"></i></a>
     <p class="footer-text">© Copyright 2020 Bread_Genie <br>
       For Kami, Ahoe and all Atinys! <br>
-      All images belong to KQ Entertainment.
+      All images belongs to KQ Entertainment.
     </p>
   </footer>
 
