--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
               <a class="nav-link" href="#albums">Albums</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" target="_blank" href="mvs.html">MVs</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">About</a>
             </li>
           </ul>
