Add member info

--- a/mvs.html
+++ b/mvs.html
@@ -6,6 +6,9 @@
   <title>ATEEZ MVs</title>
   <link rel="shortcut icon" href="ateez.ico">
 
+  <!-- Font Awsome Scripts -->
+  <script src="https://use.fontawesome.com/ddcf855669.js"></script>
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&family=Ubuntu&display=swap" rel="stylesheet">
 
@@ -51,11 +54,17 @@
     <a class="mv-list" href="https://www.youtube.com/embed/ukbr7xyPoRQ">
       <p>Promise</p>
     </a>
+    <a class="mv-list" href="https://www.youtube.com/embed/i_HzsHss94E">
+      <p>ILLUSION</p>
+    </a>
     <a class="mv-list" href="https://www.youtube.com/embed/FIInyEWWW-s">
       <p>WAVE</p>
     </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/i_HzsHss94E">
-      <p>ILLUSION</p>
+    <a class="mv-list" href="https://www.youtube.com/embed/7wcM9Eq3UbI">
+      <p>Aurora</p>
+    </a>
+    <a class="mv-list" href="https://www.youtube.com/embed/7wcM9Eq3UbI">
+      <p>Utopia</p>
     </a>
     <a class="mv-list" href="https://www.youtube.com/embed/Z_BhMhZpAug">
       <p>WONDERLAND</p>
@@ -63,12 +72,20 @@
     <a class="mv-list" href="https://www.youtube.com/embed/yW7wZX3DUaY">
       <p>Answer</p>
     </a>
+
   </section>
 
   <section class="mv-player">
     <br>
     <button type="button" class="btn mv-button btn-dark">MV List</button>
   </section>
+  <footer id="contact">
+    <a href="https://t.me/bread_genie"><i class="fa fa-2x fa-telegram" aria-hidden="true"></i></a>
+    <p class="footer-text">© Copyright 2020 Bread Genie <br>
+      For Kami, Ahoe and all Atinys! <br>
+      All images belongs to KQ Entertainment.
+    </p>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="scripts.js" charset="utf-8"></script>
 </body>
