Edit member info (Less Verbose)

--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
             src="https://lh3.googleusercontent.com/gCIYYQR46IvpMNyVByKnMkdu-HtmK3EokVp5lnGFUjWRuN9wPFZKeEHJJbYKgsnrcvnA0_MIKHoUfL21zNNp5dJ1X63crvC5iW_oJ1eU4V59ep6W6_PFMH6Jo8DXeY89h80DOz6eUwLoD_0gTX4UOmXqc4YW6B49zjQ3ZjD6iygzakYrobRCg0boHZ7swQ88gBWwPrbkC54qfm4F3SbI5Nf3MbEDBd60pCLXRQAFzO9DjzSejDUPWqVZJ80KrPxT-_sgE3DfDAhpKMWKVXjUsGZ49xiAv81qlxIdKrYPMgvHVX5jJiZudzbTsPNvRU5JtIqJ9v0xsKA-and8himpIvvCuDCzVe4QC6s6gW2z8jh0Io7jV_Xw1ntcPdgGputzTYmc4-OLHc0GbzmKIL-wK4_v8RsPMmqYEBVpRfEbS7YoNQ0-Yv-ALtWx2wAkFKPO2KD8rr_ai3JZXEFPjTW2UxETVd_shYrKwLaO1hRX-DHqILWBycOdqsAGmWTCC5n1Y33uYv6TRGAXIAD0gXBZY86XcdlDaA1Nr9j1g_uN-B3znRsSSUrw3Hb_j-uTV-sJ2XO9lbJd33X2dc7F2Q4_f-S6B_fxk4I4eG6oqSo0FkRmA5gmD-wVaUXJ5502I7-Eoj-WRc5mZ5inszLtXiFMbGPIxiFBCi4Yk9vqZRYi5CL9ulGovD_N-iINFIdsug=w506-h637-no?authuser=0"
             alt="hongjoong-pic">
           <h3 class="hongjoong-text">Hongjoong</h3>
-          <p>Kim Hongjoong (김홍중) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Leader, Rapper, Composer, Center<br>
+          <h5>Kim Hongjoong (김홍중)</h5>
+          <p>Position : Leader, Rapper, Composer, Center<br>
             Birthday : 7th November, 1998<br>
             Place : Anyang, Gyeonggi-do, South Korea</p>
         </div>
@@ -90,9 +89,8 @@
             src="https://lh3.googleusercontent.com/ciJa-cTPNAQUCwP143yKLGcJh0pfpA4ZtwycMw5zfA8GuPhKE0CDjDLm3i2KIcJSZAcC1yQUPcg6KOHE9Zm-wkfj85zqmJjHD7647VotBlBVpi3bAADLKffAb_7QnEa-YADM8ylZYR3UH2dj80O58p772_mutqPZr6lhBPjJ9cbv7ojmYjX4eetU4qNbYxrvHr5j5IoQIFqdX2T1-hOuaUBPLuvjnAPv24y7nq4iqZkkYaDiiyuaVtDFqtxpe6hK497qvTPlRNAOjmB-dGMAvoTyKfcyEggy4QjSrfHk1UKVvdXGvlcrCHHgL_CZrax5-Yuxw-ey0tufnq12LZoH3YbKT9AZUdmMetzeMg781_q04uCmswLi5K8jDAcPKdKZ57N6MYoVBnzoolW-OWcKm6QqTZZq7vsZ7Czo4iq4-LxvUjbpLN4cwgxBXB9fmrupO7VMaaIBKeNISz9bCMTkq4jy1HPoM8j-8IzbEq2o8AzdIae4D01CXAyx2Nb11J9vR0B0BTB8NTZ-pFgnqoWWHWvImuFezFgVofx0Q4X35V2yQX_fXh8Fmtrqrqq0y83GX82EgjvorMfcLRQuELcCmteuMeFpgQoAhis3YPK4SFuDnLIMrhZe8rFZCJ1K-tvD-Ox6BZzMEwqS47a8LkaN8G7UFSmef7P7vk1avsHsLy2foLjpPEnO-8eI0z_KXA=w509-h637-no?authuser=0"
             alt="seonghwa-pic">
           <h3 class="seonghwa-text">Seonghwa</h3>
-          <p>Park Seonghwa (박성화) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Vocalist, Visual<br>
+          <h5>Park Seonghwa (박성화)</h5>
+          <p>Position : Vocalist, Visual<br>
             Birthday : 3rd April, 1998<br>
             Place : Jinju, Gyeongnam, South Korea</p>
         </div>
@@ -101,9 +99,8 @@
             src="https://lh3.googleusercontent.com/f9lwwRRLTqButU0-DwBq-7X2HTDNK9A5q0RmC6vPIOAvSK0MpHHPQUK_DP3Ggzm_T8MMkiyR9LtkFv0s53HBUaWslM_omu27hlSECmOCUdsr95sZjnlY3TObrm9xohKRiR97HLQhMrbUZjMQ7ujBsvFCyzAo_4TM0ZqAZUjpnGGrQrvg-3zgizvk2R1MozYHLeWU0_QQutFnG0AYwulLPjYcw5qfpXRSnndt_endSIeZNePLCvHeuZBvqGdBqMff49G0rVar_YyEISD8cnblqvKNfCMMIfeEswwLsWQKyo68YUbOzO0S2OAIhT2QOQSHKKFJPMkNphqKol3SSDBsCYa13y0qo7seW_iX1eBhTUupM6Kdfo-gS0LVxPJRK53tfAt0JsUKZvXB-DaKFFc0NUdNWAu5nNNk_lFW9lDx0f30YkBUnD90GFTn1a_e6XWI6lOEjWUJg50xoBiTD5JYMRpnWY_KfNaH9KCeP1NRa0p5zV2XT3AWvYMzMxUs5U1U4UOgEvuM5I-m_IzWDppT0fZtWjQccJsprKTIPBZjjWAHOeXr1EIO67jTB0ojEOZi5kfd2DdwnCZVx2H7aouwDs8TEsTDSPY3_m3OE2c6DzQUsN5nwEKy9Y4_5wORJge9RxVWiNX_B-46TrU_5BGvHBuw6ng1-jJ6wzb1l7_gMPybS5sfe-V8QTORyoo2qQ=w509-h637-no?authuser=0"
             alt="yunho-pic">
           <h3 class="yunho-text">Yunho</h3>
-          <p>Jeong Yunho (정윤호) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Vocalist, Performer<br>
+          <h5>Jeong Yunho (정윤호)</h5>
+          <p>Position : Vocalist, Performer<br>
             Birthday : 23rd March, 1999<br>
             Place : Gwangju, South Korea</p>
         </div>
@@ -112,9 +109,8 @@
             src="https://lh3.googleusercontent.com/fdnmhFwh62GPR2yZK99814MxbvapMejIFrsDa2sWLY2ngCF3QH1EoVOB1ry41DI53nA12XtTth3l7YzrHg_-iC5RKnpbIf3njiENVayp15pVkDpSGsV6OsBnIdMmCT-4UMTIkxkCAThRIghv-2El7QXWSkTxsVTUo_K__utDMbo7c6ZUDx9VZUxgqF6chzkfbFd7ad0F_oYG8_R0x2pXsmB9h0UjlKZ_aT6cUcSTrHLCHLxr_bUfHlPxndxsl6qwiA8LTth7li7w9syCRIrIJA-HGbc7COutrbgHKNrW-Gvj2k9GyQ0K5l3uyA5PMHkr9oO2HwQlKMX_IqlKW07bZPD1y18_s_nC2I2WyRySuIeQTXr5boLvrBA0vEvUwd-zdtjSyTEgRgNIh86c32UpE8C6Jyv0YQ35r3iCzpYphiUQTnDekp0RWuaTxlbmObYQ6Xox-3mU4f4hs14gvm5TUBQXHicum85Ib3c_oEnLze1zOpsR_P-x8bZC_Nli15mED3El_ACDqU6r_L4lW49VpgtRjUkeaqfN0LUBUBA68CrSXkcpkzmaenFs-SyilIljP0qNCFGEcXg8WKoHQ7UN3Xpd2iMI_iLB5yRTKtAHBva7Dmx0rh9HBOaBzvIJBd1j7pk9Xt9ohngMlfvYw38AsraInqvMcEw2EingNUb7bOQWYnVOPEhp2MAc6XTcWw=w500-h637-no?authuser=0"
             alt="yeosang-pic">
           <h3 class="yeosang-text">Yeosang</h3>
-          <p>Kang Yeosang (강여상) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Vocalist, Performer, Visual<br>
+          <h5>Kang Yeosang (강여상)</h5>
+          <p>Position : Vocalist, Performer, Visual<br>
             Birthday : 15th June, 1999<br>
             Place : Pohang, South Korea</p>
         </div>
@@ -123,20 +119,18 @@
             src="https://lh3.googleusercontent.com/eZylE94evacSEeWudkhz-xTm1I21TfA21ikg9k8d2eWVKsl8xYxc1T_n5zU5PxPxzGdBCYKYPHNGTZhx8K7IuD0K20SuxXlXsGZYWCC5kw0DpyEjlMErPpXkBCXKLvzAk7gLe9A0na_eUlHd16etUNvJj0NwPn_HbtRvFylGyRij2AR5jSESa7BoMZ_vwxp4Jqy2x93XCIpb_uUsznDUQDCJCx8uoD8DR3Y7k0u8pgjlXrpWnH4cy1WhUWoljnntDXbkNWftcbdtVVaMTopnggERYOy0lf4lAjGOTsirDxiOWblDIyBfveoBkaOIYievtgnWJtdQeUS3zYPPPI6Zqogfnooe9MrwM5Th7kxxF_r1oO5OaPxY9SIv-Y_PZ5jhUdlF8vdQYFh9I6nLBOAJck86iCJr07C9LY-6bR8_XOGgjIBKr8w-l_AiRO_DThNpzYUJgsNyyiBimCi8-KYO3So-JZ5QgcPYRS3_7_SThWAw_S48rpmNJLwgL9NSF5dwZAVNfh_wjLeqzYaonvCijlFcirZCfUBqaAKQKHH5vogxHAK3nujRTPfnqx-OnfhVsQ0tmfhH-gWQUNSonmJsSLAc2Y3d72MnEWjRE3JkL0MqOgqkZusGACOmgc2crajXip7N1AVX0y5nK_9-zlOVL9op5PzoemQme4VR3cEnEe7TV72WVjNPhj-buHVo2w=w501-h637-no?authuser=0"
             alt="san-pic">
           <h3 class="san-text">San</h3>
-          <p>Choi San (최산) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Vocalist<br>
+          <h5>Choi San (최산)</h5>
+          <p>Position : Vocalist<br>
             Birthday : 10th July, 1999<br>
-            Place :  Namhae, South Gyeongsan, South Korea</p>
+            Place : Namhae, South Gyeongsan, South Korea</p>
         </div>
         <div class="carousel-item">
           <img class="members-img"
             src="https://lh3.googleusercontent.com/vBKlEfRPGxQ1CyrqrTwdWBZ-fXmyli6pWQQLMpedX3Vz-n-7-HZY_qh81Pa-Zea9AJJToJqlFeoI2MtFLHZAc9Dos4SGJegWmBO1rzlwaB8IRmj2V9hX1A-7VRr2E3LJW8luQ45X5rltYp-OdH03YQS5NiVNbPA6oTuepbmC5V8XAhF39raO4m_X-ImQ0Rud3dM8KOvfr2GVpZVR2zY4_1HWVa-DCauatIZLO99i8RzAe6EY3PBK8Ns3OWziDeG054IDPsqo2_yXrT_iquAXD8bIBUZlPU0uiR10jP8BAgYUpjxm7vUejcYcWwwz5JSvmMVK-mdM_H2xcABHlRmNweZRkCwKsDGGlgz93QY-xiSnqyAkCVW-XCB_ajz7hF3lE42N6Gm7vxQPrFHHQ5WyQPE99OlL00eaQOLe3rKsQFrlmnlSVczeSjyMqNYwZ0oThPURa_m69PfthXy7LxGefU2Tg1900vCkdsrQ_5blfVusYAtCCGGKnFDXV7y0iz0aDBa2CukQXoPLlnqcsqet7CjlmUYIQ9VeDYL88Z3RoMNk5Z4ezChISmeLOaR3RxdnkGelhr1AiGaKS-UktC1MJt6g_p1YAgIfBD_qwtOA9Br2ygV8WeH7RlxGdZIMhHLkIP4KytFOO6qgGIb9Jgp0jhlUkFpPixaZ48bY6djvJDLtkuL0bwsJh8Xvi0gjXw=w513-h637-no?authuser=0"
             alt="mingi-pic">
           <h3 class="mingi-text">Mingi</h3>
-          <p>Song Mingi (송민기) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Rapper, Performer<br>
+          <h5>Song Mingi (송민기)</h5>
+          <p>Position : Rapper, Performer<br>
             Birthday : 9th August, 1999<br>
             Place : Incheon, South Korea</p>
         </div>
@@ -145,9 +139,8 @@
             src="https://lh3.googleusercontent.com/x6m6Rt04teyslUjlNgbGyRDuFDTZDs9qpptCPSrxjsHHVCtZ0WYPxer0-CBT-3uSjb_-OBpi-IapVN3U8D3Tt3SgFqY1583AtwOGxzu3XWuQns3PI2_-OcgyVwscMX6oNr1847qut9Ltm6YGfjhZhtI4qPnS7gCNrREsHih6ohuKbB1UVV58IxSsXyxe2w7mlYq5gSYiFsC_D0fyElJDx0X0fx6xA5wWgLtJYyXpX1YirUsCY9qOv8lhFtMlfA4XecLvEQE54-_K7ohVVoy9wP0Tnd39mBg8ciqvLq1iKeLjjXjDWvrz3NVMYUjvTF3kOzkIcIZqodBJdUfGYoifJMzIXzlamNGb9sKrNWw8Zp7CIqoM_r_Rh4MLPwnatn3w3t2EbEijQzYv1DqugM1tbMgZVsIx8xnnmp53Io3qYtjqpeG-o6_KL6h-0bq0ez-K5ETKPEWGSCbeOtHZG5oiyR1f9EPOzZ7vcDzjHt4sZiCULmble48uPu5eGPfgUVaJODsDoew_Z9lJhuADQMpoB9Tdlsc08zL4f5OaglHUKlddba401javQynaLnEHXz1VZyho0Z_H9lhw-YrJf85sbEaqU7Sl0q8xoVUvZEUw4_4EsOV34vpXyyglplhlsSHVwVEerWs7zsvXaz5WftzSOefrLgyqGsTqy0MBvKZp6Yqac9C2DfX59NXrUEmEiQ=w518-h637-no?authuser=0"
             alt="wooyoung-pic">
           <h3 class="wooyoung-text">Wooyoung</h3>
-          <p>Jung Wooyoung (정우영) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Main Dancer, Vocalist, Visual<br>
+          <h5>Jung Wooyoung (정우영)</h5>
+          <p>Position : Main Dancer, Vocalist, Visual<br>
             Birthday : 26th November, 1999<br>
             Place : Ilsan, Gyeonggi-do, South Korea</p>
         </div>
@@ -156,9 +149,8 @@
             src="https://lh3.googleusercontent.com/ByKQiwMkp_S0jD1tJU6a8g_VFtMPJc0OQ5Xd44qGjsJnwV0YBZif87fKNPN_9ll0zZ3txYZ7gZRWB3beyvT1KLIcdGKtTN8McYsqf65PQVtlMbH_ElfR4_Jfn0QCPNP0bDynw5gT5JmGTmrvwY-6-Gx8LHFuaRFjBW55rKwYUkYnIb7kTx2c08GYtZM1EQwRtj6rmR5QclWzasly-ndAUADHb2cEcIHVtEIKWU48RB96wZlQmPGUGL_7sWQpVCn-xMgU0xd0pmSPnhysqixp0TV-Fgl8iG6zbWP5f3Dtcy_OSCVFN3vavU9X5KjtXr-cMAgpq5CLrebInBTrIDqa08SC24BrJk-9b0Cq8zgUkM6QpGgSFl7NrH4umBiwdwMsujfC0HOqNjyCxKFPfZz6mFvQD43VAUV7wL1h1dXfP_c29QICFiyKSLc1Dy4PHyPPQkd2zLj3PoG9WIcsPIgppfFoKJyoUvDYLOL95DVrAD_RB56e5IrNtZ9mVCJEMYwkgaI49Irgdmheb242G9U-ssrMGWEW2PzzLrgoJOz8lnSWlWT_5C3ZMqBRgHDqyjdZ8iCUanAdQU2SBkCTi4CsB_P9WuFA54uRShlt1h-9s7C8cK7KkATnYfXxc_brt2B-YGkQgFcbvuxe1QU16LiF4DtI4mcujkXjln66alCg9SmIxYJFiZyE_jVkFEHPgg=w510-h637-no?authuser=0"
             alt="jongho-pic">
           <h3>Jongho</h3>
-          <p>Choi Jongho (최종호) is a member of the K-pop Boy Band "ATEEZ" (8 Members)<br>
-            under KQ Entertainment which debuted on 24th October 2018.<br>
-            Position : Main Vocalist, Maknae<br>
+          <h5>Choi Jongho (최종호)</h5>
+          <p>Position : Main Vocalist, Maknae<br>
             Birthday : 12th October, 2000<br>
             Place : Seoul, South Korea</p>
         </div>
@@ -411,7 +403,7 @@
       All images belongs to KQ Entertainment.
     </p>
   </footer>
-
+    
 </body>
 
 </html>
