Sticky footer test-2

--- a/mvs.html
+++ b/mvs.html
@@ -39,40 +39,41 @@
 
   <h1>ATEEZ MVs</h1>
   <section id="mv-list">
-    <a class="mv-list" href="https://www.youtube.com/embed/RqJ1rH9M5G0">
-      <p>Pirate King</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/tLV83ndOwz4">
-      <p>Treasure</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/nKU4OVH18mE">
-      <p>Say My Name</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/QbjmVyP9RFg">
-      <p>HALA HALA (Hearts Awakened, Live Alive)</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/ukbr7xyPoRQ">
-      <p>Promise</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/i_HzsHss94E">
-      <p>ILLUSION</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/FIInyEWWW-s">
-      <p>WAVE</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/7wcM9Eq3UbI">
-      <p>Aurora</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/ZLQm-8Z6C8M">
-      <p>Utopia</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/Z_BhMhZpAug">
-      <p>WONDERLAND</p>
-    </a>
-    <a class="mv-list" href="https://www.youtube.com/embed/yW7wZX3DUaY">
-      <p>Answer</p>
-    </a>
-
+    <div class="mv-list-container">
+      <a class="mv-list" href="https://www.youtube.com/embed/RqJ1rH9M5G0">
+        <p>Pirate King</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/tLV83ndOwz4">
+        <p>Treasure</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/nKU4OVH18mE">
+        <p>Say My Name</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/QbjmVyP9RFg">
+        <p>HALA HALA (Hearts Awakened, Live Alive)</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/ukbr7xyPoRQ">
+        <p>Promise</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/i_HzsHss94E">
+        <p>ILLUSION</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/FIInyEWWW-s">
+        <p>WAVE</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/7wcM9Eq3UbI">
+        <p>Aurora</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/ZLQm-8Z6C8M">
+        <p>Utopia</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/Z_BhMhZpAug">
+        <p>WONDERLAND</p>
+      </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/yW7wZX3DUaY">
+        <p>Answer</p>
+      </a>
+    </div>
   </section>
 
   <section class="mv-player">
