Changed iframe implementation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ateez Fanpage</title>
   <link rel="shortcut icon" href="ateez.ico">
 
@@ -403,7 +404,7 @@
       All images belongs to KQ Entertainment.
     </p>
   </footer>
-    
+
 </body>
 
 </html>
