--- a/mvs.html
+++ b/mvs.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ATEEZ MVs</title>
   <link rel="shortcut icon" href="ateez.ico">
 
@@ -77,6 +78,7 @@
   </section>
 
   <section class="mv-player">
+    <iframe width="560" height="315" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <button type="button" class="btn mv-button btn-dark">MV List</button>
   </section>
