📱️ Made page Mobile Responsive

--- a/mvs.html
+++ b/mvs.html
@@ -78,9 +78,11 @@
   </section>
 
   <section class="mv-player">
-    <iframe width="560" height="315" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <br>
     <button type="button" class="btn mv-button btn-dark">MV List</button>
+    <br>
+    <div class="resp-container">
+      <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </section>
   <footer id="contact">
     <a href="https://t.me/bread_genie"><i class="fa fa-2x fa-telegram" aria-hidden="true"></i></a>
