📱️ Added Social Accounts

--- a/index.html
+++ b/index.html
@@ -397,6 +397,12 @@
 
   </section>
 
+  <section class="ateez-social" id="ateez-social">
+    <h2 class="social-text">Ateez Social Accounts</h2>
+    <a href="https://twitter.com/ateezofficial"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/ateez_official_"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
+  </section>
+
   <footer id="contact">
     <a href="https://t.me/bread_genie"><i class="fa fa-2x fa-telegram" aria-hidden="true"></i></a>
     <p class="footer-text">© Copyright 2020 Bread Genie <br>
