▶️  Add Watch on YouTube button on MV Page

--- a/content.html
+++ b/content.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ATEEZ MVs</title>
+  <title>ATEEZ Contents</title>
   <link rel="shortcut icon" href="ateez.ico">
 
   <!-- Font Awsome Scripts -->
@@ -32,13 +32,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+          <a class="nav-link" href="mvs.html">MVs</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="index.html#contact">About</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <h1>ATEEZ MVs</h1>
+  <h1>ATEEZ Contents</h1>
   <section id="mv-list">
     <div class="mv-list-container">
       <a class="mv-list" href="https://www.youtube.com/embed/RqJ1rH9M5G0">
@@ -79,8 +82,6 @@
 
   <section class="mv-player">
     <button type="button" class="btn mv-button btn-dark">MV List</button>
-    <br>
-    <a class="link-button" href="https://youtu.be"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
     <br>
     <div class="resp-container">
       <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
