--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               <a class="nav-link" href="mvs.html">MVs</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#ateez-social">Ateez Social</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">About</a>
             </li>
           </ul>
