▶️  Add Watch on YouTube button on MV Page

--- a/mvs.html
+++ b/mvs.html
@@ -80,7 +80,7 @@
   <section class="mv-player">
     <button type="button" class="btn mv-button btn-dark">MV List</button>
     <br>
-    <a class="link-button" href="https://youtu.be"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
+    <a class="link-button" target="_blank" href="https://youtu.be"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
     <br>
     <div class="resp-container">
       <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
