📄️  Add Ateez Content Page

--- a/content.html
+++ b/content.html
@@ -42,46 +42,43 @@
   </nav>
 
   <h1>ATEEZ Contents</h1>
-  <section id="mv-list">
-    <div class="mv-list-container">
-      <a class="mv-list" href="https://www.youtube.com/embed/RqJ1rH9M5G0">
-        <p>Pirate King</p>
+  <section id="content-list">
+    <div class="content-list-container">
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-4fj0IHg9gN6hBKUV8-vD0Q">
+        <p>KQ Fellaz American Training</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/tLV83ndOwz4">
-        <p>Treasure</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PL_G3lYLGW-D-dqRts6sXRytn68g99grxI">
+        <p>Ateez Wanted</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/nKU4OVH18mE">
-        <p>Say My Name</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PL_G3lYLGW-D8QRXX2oeyfEfGw47g_Q7_W">
+        <p>Ateez Log</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/QbjmVyP9RFg">
-        <p>HALA HALA (Hearts Awakened, Live Alive)</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-4O5IKJcO_B_7Oo0tAS1s4D">
+        <p>Treasure Film</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/ukbr7xyPoRQ">
-        <p>Promise</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-66YDesv0YAbgcZp-gNR_UX">
+        <p>Long Journey</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/i_HzsHss94E">
-        <p>ILLUSION</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-4ZjaPC-_bFC9L-9yTe5FOB">
+        <p>Weekly Idol</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/FIInyEWWW-s">
-        <p>WAVE</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-69rcb0MdAih4ozP4jkx_5s">
+        <p>Idol Radio</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/7wcM9Eq3UbI">
-        <p>Aurora</p>
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-5JUKlSyu4B8jtx70CnSQtL">
+        <p>TongTongTV</p>
       </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/ZLQm-8Z6C8M">
-        <p>Utopia</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/Z_BhMhZpAug">
-        <p>WONDERLAND</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/yW7wZX3DUaY">
-        <p>Answer</p>
+      <!-- <a class="content-list" href="">
+        <p>Hello82</p>
+      </a> -->
       </a>
     </div>
   </section>
 
   <section class="mv-player">
-    <button type="button" class="btn mv-button btn-dark">MV List</button>
+    <button type="button" class="btn mv-button btn-dark">Content List</button>
+    <br>
+    <a class="link-button" target="_blank" href="#"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
     <br>
     <div class="resp-container">
       <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
