--- a/mvs.html
+++ b/mvs.html
@@ -66,7 +66,7 @@
         <p>Aurora</p>
       </a>
       <a class="mv-list" href="https://www.youtube.com/embed/ZLQm-8Z6C8M">
-        <p>Utopia</p>
+        <p>Utopia (Japanese Ver.)</p>
       </a>
       <a class="mv-list" href="https://www.youtube.com/embed/Z_BhMhZpAug">
         <p>WONDERLAND</p>
@@ -74,13 +74,16 @@
       <a class="mv-list" href="https://www.youtube.com/embed/yW7wZX3DUaY">
         <p>Answer</p>
       </a>
+      <a class="mv-list" href="https://www.youtube.com/embed/xU7vogho4R0">
+        <p>Answer (Japanese Ver.)</p>
+      </a>
     </div>
   </section>
 
   <section class="mv-player">
     <button type="button" class="btn mv-button btn-dark">MV List</button>
     <br>
-    <a class="link-button" target="_blank" href="https://youtu.be"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
+    <a class="link-button" target="_blank" href="#"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
     <br>
     <div class="resp-container">
       <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
