🏔️  Added ATEEZ Group Pic in Homepage

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="title-heading">8 makes 1 Team!</h1>
-        </div>
-        <div class="col-lg-6">
           <img class="title-image"
             src="https://lh3.googleusercontent.com/pw/ACtC-3dego6R9GzSAxU5uME2UpsSA3q0eIlUUo2AVG4_QUQYmQyhs-c96ICyHyYvN9OIujD6dfXMP5bTFc17GxVStCK2lBwc_SLwHTfRxGSFTNNO-1Rur8Loh7Sp6WBE4M5vJ0aloqTRXatrvEF9OqMf-FIq=w360-h234-no?authuser=0"
             alt="ateez-logo">
+          <h1 class="title-heading">8 makes 1 Team!</h1>
+        </div>
+        <div class="col-lg-6">
+          <img class="group-image"
+            src="https://lh3.googleusercontent.com/5Rn4slj0lNWhLwfcGetoesWM0jN16Y3IhcJwFojo_xParAYaTb1aeloE0XKynPY6yzinr-JJavhRXTsuZ0wl7_UHlw4QqmMqaIxR__2zdZApMvSlrV86SbLuJxYz8L_DyukPTTUa4w=w2400"
+            alt="ateez-group-pic">
         </div>
       </div>
     </div>
