🖊️  Edit Content to Shows & Segments

--- a/content.html
+++ b/content.html
@@ -41,7 +41,7 @@
     </div>
   </nav>
 
-  <h1>ATEEZ Contents</h1>
+  <h1>ATEEZ Shows & Segments</h1>
   <section id="content-list">
     <div class="content-list-container">
       <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-4fj0IHg9gN6hBKUV8-vD0Q">
