--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="mvs.html">MVs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="content.html">Contents</a>
+              <a class="nav-link" href="content.html">Shows & Segments</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#ateez-social">Ateez Social</a>
