--- a/mvs.html
+++ b/mvs.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="content.html">Contents</a>
+          <a class="nav-link" href="content.html">Shows & Segments</a>
         </li
         <li class="nav-item">
           <a class="nav-link" href="index.html#contact">About</a>
