🖊️  Change name from ATEEZ FANPAGE to FOR ATEEZ

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ateez Fanpage</title>
+  <title>FOR ATEEZ</title>
   <link rel="shortcut icon" href="ateez.ico">
 
   <!-- Font Awsome Scripts -->
@@ -37,7 +37,7 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">ATEEZ FANPAGE</a>
+        <a class="navbar-brand" href="">FOR ATEEZ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
