--- a/mvs.html
+++ b/mvs.html
@@ -25,7 +25,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html">ATEEZ FANPAGE</a>
+    <a class="navbar-brand" href="index.html">FOR ATEEZE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,7 +33,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="content.html">Shows & Segments</a>
-        </li
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html#contact">About</a>
         </li>
