⭕️ Add spinners while loading

--- a/mvs.html
+++ b/mvs.html
@@ -88,6 +88,9 @@
     <br>
     <a class="link-button" target="_blank" href="#"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
     <br>
+    <div class="spinner-border spinner-border-lg spinner-hide text-light" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
     <div class="resp-container">
       <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
