➕  Add new Album

--- a/index.html
+++ b/index.html
@@ -385,13 +385,34 @@
           </a>
           <a href="https://open.spotify.com/track/0IYzOPey6QXAlE4eiyMVub?si=fH6_3n4vSL-bpy9zrgNQ9A">
             <p class="album-tracks">Star 1117 (BUDDY's Melodic Mix)</p>
-            </p>
           </a>
         </div>
         <div class="carousel-item">
-          <img src="https://pbs.twimg.com/media/Eb_-61PU8AAdjsY.jpg:large" class="album-img" alt="fever-1-pic">
-          <h3 class="album-title">ZERO: FEVER Part 1 (2020)</h3>
-          <h3>Coming Soon</h3>
+          <a href="https://open.spotify.com/album/01IFxHiVOY6uf3vUFVXEoI?si=1_oJkfvXTbWAeJfPYcb4dQ"><img src="https://pbs.twimg.com/media/Eb_-61PU8AAdjsY.jpg:large" class="album-img" alt="fever-1-pic"></a>
+          <a href="https://open.spotify.com/album/01IFxHiVOY6uf3vUFVXEoI?si=1_oJkfvXTbWAeJfPYcb4dQ">
+            <h3 class="album-title">ZERO: FEVER Part 1 (2020)</h3>
+          </a>
+          <a href="https://open.spotify.com/track/093RivoXCivJPm372opl5Q?si=vkHq4-TTQtiGYm8xyyRQXw">
+            <p class="album-tracks">Dear Diary : 2016.07.29</p>
+          </a>
+          <a href="https://open.spotify.com/track/2dPETee06bbHulsABk0h7I?si=hY1N6Z4EQXGE7zjXkLN6tQ">
+            <p class="album-tracks">FEVER</p>
+          </a>
+          <a href="https://open.spotify.com/track/0YXpDiXEQlRmVSAFcub7sE?si=uCZhcpXKS22oHcNNTvNZVg">
+            <p class="album-tracks">THANXX</p>
+          </a>
+          <a href="https://open.spotify.com/track/3c8UznwIeQjux7OWT0Wa0s?si=GwqtZwVWS0mQGKDQABAAKg">
+            <p class="album-tracks">TO THE BEAT</p>
+          </a>
+          <a href="https://open.spotify.com/track/7zC6xvBPnIC92K06pMpstY?si=LKFPrB7WQ_G4shA2njiVGw">
+            <p class="album-tracks">INCEPTION</p>
+          </a>
+          <a href="https://open.spotify.com/track/5U8pXQSdhTtQ8bp6K6vb9Y?si=lk9Tq8VuSqypDWTKCunCwQ">
+            <p class="album-tracks">Good Lil Boy</p>
+          </a>
+          <a href="https://open.spotify.com/track/1eFk8R4OobU7kaAZdfYBKz?si=YTAKH9WUTL6rScgTWahi5Q">
+            <p class="album-tracks">One Day At A Time</p>
+          </a>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
