➕  Add new Album

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://open.spotify.com/album/01IFxHiVOY6uf3vUFVXEoI?si=1_oJkfvXTbWAeJfPYcb4dQ"><img src="https://pbs.twimg.com/media/Eb_-61PU8AAdjsY.jpg:large" class="album-img" alt="fever-1-pic"></a>
+          <a href="https://open.spotify.com/album/01IFxHiVOY6uf3vUFVXEoI?si=1_oJkfvXTbWAeJfPYcb4dQ"><img src="https://vignette.wikia.nocookie.net/atiny/images/9/93/Zero_Fever_Part_1_Album_Cover.jpg/revision/latest?cb=20200729095333" class="album-img" alt="fever-1-pic"></a>
           <a href="https://open.spotify.com/album/01IFxHiVOY6uf3vUFVXEoI?si=1_oJkfvXTbWAeJfPYcb4dQ">
             <h3 class="album-title">ZERO: FEVER Part 1 (2020)</h3>
           </a>
